--- a/components/navBar.xaml
+++ b/components/navBar.xaml
@@ -1,17 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 x:Class="LinphoneXamarin.components.navBar"
-             xmlns:pages="clr-namespace:LinphoneXamarin.components">
+             xmlns:pages="clr-namespace:LinphoneXamarin.components"
+             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core">
     
     <MasterDetailPage.Master>
         <pages:navBarMaster x:Name="MasterPage"  />
     </MasterDetailPage.Master>
 
     <MasterDetailPage.Detail>
-        <NavigationPage>
+        <NavigationPage BarBackgroundColor="#00688f" BarTextColor="White"
+                        ios:NavigationPage.PrefersLargeTitles="false"
+                        ios:Page.UseSafeArea="false">
             <x:Arguments>
-               <pages:Tabs />
+               <pages:Tabs Padding="0,15,0,0" BarTextColor="White" BarBackgroundColor="#00688f"  />
             </x:Arguments>
         </NavigationPage>
     </MasterDetailPage.Detail>
