--- a/components/ContactTabbedPage.xaml
+++ b/components/ContactTabbedPage.xaml
@@ -2,8 +2,7 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="LinphoneXamarin.components.ContactTabbedPage"
-           xmlns:pages="clr-namespace:LinphoneXamarin.components"
-            >
+           xmlns:pages="clr-namespace:LinphoneXamarin.components">
 
     <pages:Favorites  Title="Favorites" />
     <pages:Recent Title="Recent" />
